# SECCON2022_final_CTF

./: .gitignore  .gitmodules  README.md
competition/: dom_ctftime_format_ranking.json  dom_ranking.json  dom_ranking.md  gen.oy  int_ctftime_format_ranking.json  int_ranking.json  int_ranking.md
koh/witchquiz/witchquiz/: .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  ec_problem.ans  initialdb_setup.bash  manage.py  phase_problem.ans  purerandom.ans  pyproject.toml  randomrotate.ans  set_rounddata.py
koh/witchquiz/witchquiz/problemFiles/: ec.py  ec_problem.py  phase.py  purerandom.py  randomrotate.py
koh/witchquiz/witchquiz/witchquiz/: apps.py  asgi.py  backends.py  ec_problem.ans  models.py  phase_problem.ans  purerandom.ans  randomrotate.ans  scoreing.py  settings.py  signals.py  urls.py  wsgi.py
koh/witchquiz/witchquiz/witchquiz/apis/: api.py
koh/witchquiz/witchquiz/witchquiz/datas/: problems.json  tokens.json  users.json
koh/witchquiz/witchquiz/witchquiz/logic/: common.py
koh/witchquiz/witchquiz/witchquiz/migrations/: 0001_initial.py  0002_roundstageticktime_checked_and_more.py
koh/witchquiz/witchquiz/witchquiz/quiz/: cossin.py  cossin_secrets.py  ec.py  ec_problem.py  iproblem.py  phase_problem.py  problem1.py  problemlist.py  purerandom.py  randomrotate.py
koh/witchquiz/witchquiz/witchquiz/templates/witchquiz/: base.html  home.html  howto.html  login.html  stage.html
koh/witchquiz/witchquiz/witchquiz/views/: download.py  home.py  howto.py  login.py  stage.py  tick.py
(+71 files in other folders)
